feat: Switch CMS to GitHub backend authentication
- Changed backend from git-gateway to GitHub OAuth
- Configured repo: karanpuri1406-sys/UPSCVISION
- Removed Netlify Identity widget dependencies
- Simplified admin panel and base template
- CMS now uses direct GitHub authentication via Netlify

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: karanpuri1406-sys/UPSCVISION
   branch: main
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
 
 # Uncomment for local testing
 # local_backend: true
