fix: Update baseURL to correct Netlify URL
- Changed from upscvisionpreponline.com to upscvisionprep.netlify.app
- Ensures proper URL generation for all site links

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://upscvisionpreponline.com/"
+baseURL = "https://upscvisionprep.netlify.app/"
 languageCode = "en-us"
 title = "UPSC Vision Prep - Master the Art of Civil Services"
 
